--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-xstatic-angular (1.2.16.1-3) unstable; urgency=medium
+
+  * Updated upstream VCS URLs (now on Stackforge).
+
+ -- Thomas Goirand <zigo@debian.org>  Wed, 13 Aug 2014 23:32:07 +0800
+
 python-xstatic-angular (1.2.16.1-2) unstable; urgency=medium
 
   * Using the .min.js version of Angular.
