--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-xstatic-angular (1.2.16.1-2) unstable; urgency=medium
+
+  * Added Google INC as copyright holder.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 04 Sep 2014 22:57:48 +0800
+
 python-xstatic-angular (1.2.16.1-1) unstable; urgency=medium
 
   * Initial release. (Closes: #757778)
