--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-xstatic-angular (1.2.23.1-3) unstable; urgency=medium
+
+  * Relaxes version dependency.
+
+ -- Thomas Goirand <zigo@debian.org>  Tue, 16 Sep 2014 01:23:38 +0800
+
 python-xstatic-angular (1.2.23.1-2) unstable; urgency=medium
 
   * Fixed wrong libjs-angularjs dependency versions.
