--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-xstatic-angular (1.2.23.1-4) unstable; urgency=medium
+
+  * Fixed wrong BASE_DIR directive.
+
+ -- Thomas Goirand <zigo@debian.org>  Fri, 26 Sep 2014 23:51:49 +0800
+
 python-xstatic-angular (1.2.23.1-3) unstable; urgency=medium
 
   * Relaxes version dependency.
