--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-xstatic-angular (1.3.7.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+  * Now using embedded version of Angular.
+
+ -- Thomas Goirand <zigo@debian.org>  Tue, 10 Feb 2015 16:32:36 +0100
+
 python-xstatic-angular (1.2.23.1-4) unstable; urgency=medium
 
   * Fixed wrong BASE_DIR directive.
