--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-python-xstatic-angular (1.3.7.0-1) UNRELEASED; urgency=medium
+python-xstatic-angular (1.3.7.0-1) unstable; urgency=medium
 
   * New upstream release.
+  * Uploading to unstable.
   * Now using embedded version of Angular.
 
  -- Thomas Goirand <zigo@debian.org>  Tue, 10 Feb 2015 16:32:36 +0100
