--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+python-xstatic-angular (1.3.7.0-2) unstable; urgency=medium
+
+  * Lift upperbound restriction for libjs-angularjs version.
+  * Standards-Version: is now 3.9.6.
+  * Removed Pre-Depends: on dpkg.
+  * Added missing dh-python build-depends.
+  * Removed version of python-all build-depends.
+
+ -- Thomas Goirand <zigo@debian.org>  Tue, 28 Jul 2015 23:49:23 +0200
+
 python-xstatic-angular (1.3.7.0-1) unstable; urgency=medium
 
   * New upstream release.
