--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-xstatic-angular (1.3.7.0-3) UNRELEASED; urgency=medium
+
+  * Fixed VCS URLs (https).
+
+ -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:53:32 +0100
+
 python-xstatic-angular (1.3.7.0-2) unstable; urgency=medium
 
   * Lift upperbound restriction for libjs-angularjs version.
