d/rules: Changed UPSTREAM_GIT to new URL

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-xstatic-angular (1.3.7.0-3) UNRELEASED; urgency=medium
 
   * Fixed VCS URLs (https).
+  * d/rules: Changed UPSTREAM_GIT to new URL
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:53:32 +0100
 
